--- a/examples/wordpress/docker-compose-wait-for-it.yaml
+++ b/examples/wordpress/docker-compose-wait-for-it.yaml
@@ -1,6 +1,6 @@
+# Version 3 does not support dependencies with healthiness checks,
+# but docker swarm.
 version: '3'
-# volumes:
-#  wp:
 
 services:
   mariadb:
@@ -8,14 +8,19 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: secret
     volumes:
+      # Use bind mounts.
       - ./wp/mariadb/conf:/etc/mysql/conf.d:ro
       - ./wp/mariadb/data:/var/lib/mysql
-      # - wp:/var/lib/mysql
 
   wordpress:
     image: wordpress:php7.0
 
-    # Duplicate some settings from the wordpress docker image for the sake of starting up only after MariaDB is up.
+    # Define 'db' alias for the mariadb service.
+    links:
+      - mariadb:db
+
+    # Duplicate some settings from the wordpress docker image for the sake of
+    # starting up only after MariaDB is up.
     entrypoint: /wait-for-it.sh --strict --timeout=90 db:3306 -- /usr/local/bin/docker-entrypoint.sh
     command: apache2-foreground
 
@@ -29,9 +34,6 @@ services:
       - ./wp/app/wp-content:/var/www/html/wp-content
       # Support waiting for MariaDB.
       - ./wait-for-it/wait-for-it.sh:/wait-for-it.sh:ro
-    # Define 'db' alias for the mariadb service.
-    links:
-      - mariadb:db
     # Defines startup order only.
     depends_on:
       - mariadb
