--- a/examples/wordpress/docker-compose-healthiness.yaml
+++ b/examples/wordpress/docker-compose-healthiness.yaml
@@ -10,7 +10,7 @@ services:
       - ./wp/db/conf:/etc/mysql/conf.d:ro
       - ./wp/db/data:/var/lib/mysql
 
-    # Required to because of "condition: service_healthy" below.
+    # Required because of "condition: service_healthy" below.
     healthcheck:
       test: ["CMD", "mysql", "-uroot", "-psecret", "-e", "SELECT 1;"]
       start_period: 5s
