--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
   "markdown-pdf.styles": [
-    "D:\\Users\\agross\\Documents\\Dokumente\\Talks\\docker\\.vscode\\markdown-pdf.css",
-    "~/Nextcloud/Documents/Talks/docker/.vscode/markdown-pdf.css"
+    ".vscode/markdown-pdf.css"
   ],
   "markdown-pdf.stylesRelativePathFile": true,
   "markdown-pdf.convertOnSave": true,
