Changes for current MariaDB images which no longer support MYSQL_*

--- a/examples/wordpress/docker-compose-healthiness-volumes.yaml
+++ b/examples/wordpress/docker-compose-healthiness-volumes.yaml
@@ -7,7 +7,7 @@ services:
   mariadb:
     image: mariadb
     environment:
-      MYSQL_ROOT_PASSWORD: secret
+      MARIADB_ROOT_PASSWORD: secret
     volumes:
       # Use volume mounts (see above).
       - wp-db-conf:/etc/mysql/conf.d:ro
@@ -15,8 +15,9 @@ services:
 
     # Required to because of "condition: service_healthy" below.
     healthcheck:
-      test: ["CMD", "mysql", "-uroot", "-psecret", "-e", "SELECT 1;"]
+      test: ["CMD", "mariadb", "-uroot", "-psecret", "-e", "SELECT 1;"]
       start_period: 5s
+      interval: 5s
 
   wordpress:
     image: wordpress:php7.0
