--- a/examples/wordpress/docker-compose-healthiness.yaml
+++ b/examples/wordpress/docker-compose-healthiness.yaml
@@ -2,15 +2,16 @@ services:
   mariadb:
     image: mariadb
     environment:
-      MYSQL_ROOT_PASSWORD: secret
+      MARIADB_ROOT_PASSWORD: secret
     volumes:
       - ./wp/db/conf:/etc/mysql/conf.d:ro
       - ./wp/db/data:/var/lib/mysql
 
     # Required because of "condition: service_healthy" below.
     healthcheck:
-      test: ["CMD", "mysql", "-uroot", "-psecret", "-e", "SELECT 1;"]
+      test: ["CMD", "mariadb", "-uroot", "-psecret", "-e", "SELECT 1;"]
       start_period: 5s
+      interval: 5s
 
   wordpress:
     image: wordpress:php7.0
